[project]
name = "cpc"
version = "0.1.0"
description = "Character prefix conditioning utils and scripts."
authors = ["Devin Shah <dshah3@outlook.com>"]
requires-python = ">=3.8"

[project.dependencies]
torch = "*"
huggingface_hub[cli] = "*"
vllm = "0.9.2"
transformers = "4.52.4"
fastapi = "0.115.0"
uvicorn[standard] = "0.30.6"
requests = ">=2.31.0"
